--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
 }
 
 body{
-    background-color: rgba(49, 179, 179, 0.936);
+    background-color: #D3F3EE;
     text-align: center;
 }
 
 h1{
     padding: 2rem;
     font-size: 3rem;
-    text-decoration: underline;
     /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
     color: rgba(8, 7, 28, 0.796);
+    background-color: #A9D5D6;
 }
 
 .container{
@@ -39,10 +39,10 @@ h1{
     width: 18vmin;
     border-radius: 1rem;
     border: none;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
     font-size: 8vmin;
     color: rgba(93, 42, 42, 0.781);
-    background-color: rgb(236, 220, 220);
+    background-color: #7FB7BE;
 }
 
 
@@ -99,5 +99,6 @@ h1{
     box-shadow: 0 0 1rem rgba(255, 200, 0, 0.6);
     background-color: #fff7d6;
 }
+
 
 
